[tool.poetry]
name = "deepspeech-server"
version = "2.1.0"
description = "server for mozilla deepspeech"
authors = ["Romain Picard <romain.picard@softathome.com>"]
maintainers = ["Romain Picard <romain.picard@softathome.com>"]
license = "MPL-2.0"
readme = "README.rst"
homepage = "https://github.com/MainRo/deepspeech-server"
repository = "https://github.com/MainRo/deepspeech-server.git"
keywords = ["deepspeech", "speech recognition"]
classifiers = [
        'Development Status :: 3 - Alpha',
        'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
        'Intended Audience :: Developers',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Artificial Intelligence'
    ]

[tool.poetry.dependencies]
python = ">=3.6"
rx = ">=3.0"
scipy = ">=1.0"
cyclotron = ">=1.2"
cyclotron-aiohttp = ">=1.0"
cyclotron-std = ">=1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
